# TrueRandom

./: LICENSE  README.md  pyproject.toml
examples/: demo.py
tests/: test_rng.py
truer/: __init__.py
truer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
truer/core/: engine.py  rng.py
truer/entropy/: cpu_jitter.py  mixer.py  os_entropy.py
