[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "truer"
version = "0.1.0"
description = "Multi-source entropy-based random number generator"
authors = [{name="Scriptus"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]